# Web_3.0_MetaverseCourse_PIAIC

./: README.md
Course/GenAI/1_Poetry/project_1/: pyproject.toml
Course/GenAI/1_Poetry/project_1/project_1/: main.py
Course/GenAI/1_Poetry/project_1/tests/: test_myproject.py
Course/GenAI/2_FastAPI/Fast_API/: pyproject.toml
Course/GenAI/2_FastAPI/Fast_API/fast_api/: main.py
Course/GenAI/2_FastAPI/Fast_API/tests/: test_main.py
Course/Quarter 1/Practice/01 - Variables/: index.js  index.ts  package.json
Course/Quarter 1/Practice/02 - Arithmetic Operators/: index.js  index.ts  package.json
Course/Quarter 1/Practice/03 - Assignment Operators/: index.ts  package.json
Course/Quarter 1/Practice/04 - Comparison Operators/: index.js  index.ts  package.json
Course/Quarter 1/Practice/05 - Logical Operators/: index.ts  package.json
Course/Quarter 1/Practice/06 - If-Else/: index.js  index.ts  package.json
Course/Quarter 1/Practice/07 - Nested-If-Else/: index.js  index.ts  package.json
Course/Quarter 1/Practice/08 - Functions/: index.js  index.ts  package.json
Course/Quarter 1/Practice/09 - Arrow Function/: index.ts  package.json
Course/Quarter 1/Practice/10 - Array/: index.ts  package.json
Course/Quarter 1/Practice/11 - Array Methods/: index.ts  package.json
Course/Quarter 3/FastAPI/hello-fastapi/: pyproject.toml
Course/Quarter 3/FastAPI/hello-fastapi/todos/: main.py
