[tool.poetry]
name = "project-1"
version = "0.1.0"
description = ""
authors = ["Abdul Rehman <abdul.rehman11992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.2"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
