[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["Abdul Rehman <abdul.rehman11992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
